# epub

./: .clinerules  .gitignore  QUICKSTART.md  README.md  pyproject.toml
.roo/rules-architect/: pdf-kindle-rules.md
.roo/rules-code/: pdf-kindle-rules.md
.roo/skills-code/: pdf-kindle-optimizer.md
input/: .gitkeep
output/: .gitkeep
pdf_kindle_optimizer/: __init__.py  cli.py  core.py
plans/: pdf-kindle-ai-workflow-enhancement-updated.md  pdf-kindle-ai-workflow-enhancement.md  pdf-kindle-left-right-enhancement-plan.md  pdf-kindle-left-right-enhancement-simplified.md
